--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,29 +73,43 @@ jobs:
   notify:
     needs: deploy
     runs-on: ubuntu-latest
+    if: always()
     steps:
       - name: Dingtalk Notification
+        env:
+          WEBHOOK_URL: ${{ secrets.DINGTALK_WEBHOOK }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          DEPLOY_RESULT: ${{ needs.deploy.result }}
+          SERVER_URL: http://8.136.36.185:5000 # 你的服务器访问地址
         run: |
           STATUS="{{ needs.deploy.result }"
-          if [ "$STATUS" != "success" ]; then
-            EMOJI="✅"  
-            TITILE="部署成功"
+          if [ "$STATUS" != "success" ]; then 
+            TITILE="✅ 部署成功"
           else
-            EMOJI="❌"
-            TITILE="部署失败"
+            TITILE="❌ 部署失败"
           fi
+
+          # 2. 构建 Markdown 消息内容
+          # 注意：这里我们只构建 Markdown 文本，不进行 JSON 转义，交给 jq 处理
+          MARKDOWN_TEXT="# ${TITLE} \n
+          \n **项目**: -pj \n\n **提交信息**: ${COMMIT_MESSAGE} \n
+          \n **访问地址**: [点击访问](${SERVER_URL}) \n
+          \n > 来自 GitHub Actions 自动化流水线"
+
+          # 3. 使用 jq 构造完整的 JSON 负载
+          # jq 会自动处理所有变量中的特殊字符转义，确保 JSON 格式正确
+          JSON_PAYLOAD=$(jq -n \
+            --arg msgtype "markdown" \
+            --arg title "GitHub Actions 通知" \
+            --arg text "$MARKDOWN_TEXT" \
+            '{msgtype: $msgtype, markdown: {title: $title, text: $text}}')
+          
+          # 4. 打印将发送的 JSON 负载以进行调试
+          echo "Debug: JSON Payload to send: $JSON_PAYLOAD"
+
           # 发送请求到钉钉 (关键词 GitHub 必须有)
-          curl '${{ secrets.DINGTALK_WEBHOOK }}' \
-          -H 'Content-Type: application/json' \
-          -d '{
-                \"msgtype\": \"markdown\",
-                \"markdown\": {
-                \"title\": \"Github Actions 通知\",
-                \"text\": \"# ${EMOJI} ${TITLE}\n\n > **PJ项目**： \n
-                  \n  > **提交信息**: ${{ github.event.head_commit.message }} \n
-                  \n **访问**: [http://8.136.36.185:5000](http://8.136.36.185:5000) \n
-                  \n > 来自 GitHub Actions\"
-                }
-              }'        
+          curl -X POST "$WEBHOOK_URL" \
+            -H "Content-Type: application/json" \
+            -d "$JSON_PAYLOAD"      
 
           
