--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,18 +54,35 @@ jobs:
           key: ${{ secrets.SERVER_KEY }}
           # 若 ssh 端口不是 22，可添加 port: 2222
           script: |
-            # 停止并删除旧容器（如果存在）
-            docker stop flask-app || true
-            docker rm flask-app || true
+            set -e
             
-            # 拉取最新镜像
+            # 1. 定义变量：根据当前分支名决定 容器名 和 端口
+            # 如果是 main 分支 -> 容器名 flask-app, 端口 5000
+            # 如果是 dev 分支  -> 容器名 flask-app-dev, 端口 5001
+            
+            BRANCH_NAME=${{ github.ref_name }}
+            
+            if [ "$BRANCH_NAME" == "main" ]; then
+              CONTAINER_NAME="flask-app"
+              PORT=5000
+            else
+              CONTAINER_NAME="flask-app-dev"
+              PORT=5001
+            fi
+            
+            echo "🚀 Deploying branch: $BRANCH_NAME to Port: $PORT"
+            
+            # 2. 停止并删除对应的旧容器
+            docker stop $CONTAINER_NAME || true
+            docker rm $CONTAINER_NAME || true
+            
+            # 3. 启动新容器 (注意这里使用了变量)
             docker pull ${{ env.IMAGE_NAME }}:latest
             
-            # 启动新容器
             docker run -d \
-              --name flask-app \
+              --name $CONTAINER_NAME \
               --restart always \
-              -p 5000:5000 \
+              -p $PORT:5000 \
               ${{ env.IMAGE_NAME }}:latest
             
             # 清理无用的旧镜像
