Fix bug--file route

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,8 +110,8 @@ jobs:
             SERVER_URL: http://59.110.53.164:5000
           run: |
               # 1. 给脚本赋予执行权限
-              chmod +x ./scripts/dingtalk-notify.sh
+              chmod +x ../../scripts/dingtalk-notify.sh
 
               # 2. 运行脚本
-              ./scripts/dingtalk-notify.sh
+              ../../scripts/dingtalk-notify.sh
           
